tests/examples/errors/modules/CircularImport/ping.hkf
module exporting *

import errors.modules.CircularImport.pong
